--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,13 +1,19 @@
+
 <%- include("partials/header"); -%>
-<h1>Home</h1>
-<p><%= startingContent %></p>
+    <h1>Home</h1>
+    <p> <%= startingContent %> </p>
 
-<% posts.forEach(function(post){ %>
 
-<h1><%=post.title%></h1>
-<p>
-  <%=post.content.substring(0, 100) + " ..."%>
-  <a href="/posts/<%=post.title%>">Read More</a>
-</p>
+  <%  posts.forEach(function(post){ %>
 
-<% }) %> <%- include("partials/footer"); -%>
+    <h1><%=post.title%></h1>
+    <p>
+    <%=post.content.substring(0, 100) + " ..."%>
+    <a href="/posts/<%=post.title%>">Read More</a>
+    </p>
+
+
+    <% }) %>
+
+
+<%- include("partials/footer"); -%>
